...
                android:background="@drawable/tag_left_corners"
                android:padding="@dimen/elevation_all"
                android:text="@string/shape_weight"
                android:textAlignment="viewStart"
                android:textColor="@color/colorMyType"
                android:textSize="@dimen/text_content"
                app:layout_constraintBottom_toBottomOf="@+id/number_weight"
                app:layout_constraintEnd_toStartOf="@+id/number_weight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/number_weight"
                app:srcCompat="@drawable/icon_weight" />

...
                android:background="@drawable/tag_left_corners"
                android:padding="@dimen/elevation_all"
                android:textAlignment="viewStart"
                android:textColor="@color/colorMyType"
                android:textSize="@dimen/text_content"
                app:layout_constraintBottom_toBottomOf="@+id/shaperecord_title_weight"
                app:layout_constraintEnd_toStartOf="@+id/number_body_water"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/number_weight"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_weight"
                app:srcCompat="@drawable/icon_body_water" />

        <EditText
...
                android:background="@drawable/tag_left_corners"
                android:padding="@dimen/elevation_all"
                android:textAlignment="viewStart"
                android:textColor="@color/colorMyType"
                android:textSize="@dimen/text_content"
                app:layout_constraintBottom_toBottomOf="@+id/shaperecord_title_body_water"
                app:layout_constraintEnd_toStartOf="@+id/number_body_fat"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/number_body_water"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_body_water"
                app:srcCompat="@drawable/icon_body_fat" />

        <EditText
...
            android:layout_marginTop="16dp"
            android:background="@drawable/tag_left_corners"
            android:padding="@dimen/elevation_all"
            android:textAlignment="viewStart"
            android:textColor="@color/colorMyType"
            android:textSize="@dimen/text_content"
            app:layout_constraintBottom_toBottomOf="@+id/number_tdee"
            app:layout_constraintEnd_toStartOf="@+id/number_weight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shaperecord_title_weight"
            app:srcCompat="@drawable/icon_tdee" />

...
            android:layout_height="0dp"
            android:background="@drawable/tag_left_corners"
            android:padding="@dimen/elevation_all"
            android:textColor="@color/colorMyType"
            android:textSize="@dimen/text_content"
            app:layout_constraintBottom_toBottomOf="@+id/shaperecord_title_tdee"
            app:layout_constraintEnd_toStartOf="@+id/number_muscle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/shaperecord_title_body_water"
            app:layout_constraintTop_toTopOf="@+id/shaperecord_title_tdee"
            app:srcCompat="@drawable/icon_muscle" />

        <EditText
...
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number_muscle"
            app:layout_constraintTop_toTopOf="@+id/shaperecord_title_muscle"
            app:srcCompat="@drawable/icon_body_age" />

        <EditText
                android:id="@+id/number_body_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/tag_right_corners"
                android:hint="0.0"
                android:padding="@dimen/elevation_all"
...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </com.terricom.mytype.shaperecord.ShapeCalendarFragment>

        <ImageView
                android:id="@+id/button_shaperecord_save"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_all_bottom_layout"
                android:background="@color/colorMyType"
                android:fontFamily="@font/noto_sans"
                android:paddingLeft="@dimen/elevation_all"
                android:paddingTop="@dimen/elevation_all"
...
