...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/elevation_all"
            android:onClick="@{() -> dialog.dismiss()}">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_message"
                android:layout_width="@dimen/size_message"
                android:layout_height="@dimen/size_message"
                android:background="@drawable/calendar_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
